tests/NormalTests/paczka2/big_fuzzy/27178706.err
Error in line 5: kqk7zNEN A511 91,0
Error in line 7: mzNXuX A511 54,2
Error in line 37: wRUc S92 55,6
Error in line 35: fx4 A567 44,0
Error in line 43: kqk(zNEN A511 51,0
Error in line 46: kqk7zNEN S92 71,0
Error in line 58: Wpv1pUT6kTB S92 41,4
Error in line 54: kqk7zNEN A511 31,3
Error in line 59: Wpv1pUT6kTB A567 18,7
Error in line 68: Wpv1pUT6kTB S459 97,7
Error in line 71: Wpv1pUT6kTB A567 80,3
Error in line 77: Wpv1pUT6kTB A511 3,2
Error in line 91: wRUc A567 88,2
Error in line 89: mzNXuX A567 13,6
Error in line 90: Za2QO S459 7,9
Error in line 110: kqk7zNEN S459 Z2,7
Error in line 109: Za2QO S459 44,6
Error in line 87: kqk7zNEN S459 62,7
Error in line 115: kqk7zNEN S92 62,1
Error in line 120: mzNXuX A567 12,5
Error in line 119: Za2QO A567 48,4
Error in line 135: kqk7zNEN A567 7,8
Error in line 136: kqk7zNEN S92 79,3
Error in line 132: S92 A567 65,1
Error in line 137: kqk7zNEN S459 84,2
Error in line 140: kqk7zNEN A511 45,0
Error in line 138: S92 A511 99,7
Error in line 145: kqk7zNEN A567 349,0
Error in line 177: S92 A511 98,2
Error in line 180: kqk7zNEN S92 747,2
Error in line 191: mzNXuX A567 81,0
Error in line 190: Za2QO A567 11,4
Error in line 179: wRUc A567 16,6
Error in line 207: Za2QO S92 75,5
Error in line 210: Za2QO A511 48,7
Error in line 211: Za2QO S459 84,5
Error in line 204: wRUc A511 23,1
Error in line 217: Wpv1pUT6kTB A567 77,4
Error in line 218: fx4 A567 89,9
Error in line 219: wRUc S459 41,5
Error in line 231: Za2QO A567 0,4
Error in line 241: kqk7zNEN A511 13,24
Error in line 228: wRUc S92 72,4
Error in line 244: S92 A567 86,5
Error in line 245: S92 S92 89,1
Error in line 249: S92 A511 -2,8
Error in line 238: fx4 A567 3,7
